# Deepfake-Detector

./: Dockerfile  README.md  app.py  deepfake-detection-model-training-3 (2).ipynb  deepfake-detection-raw-data-processing.ipynb  inference-pipelines-for-deepfake-detection.ipynb  predict.py  requirements.txt  setup.cfg
models/: in_the_wild_audio_audio_best.pth
src/deepfake_detector/: __init__.py  __main__.py  api.py  inference.py  models.py  preprocess.py  utils.py
src/deepfake_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_inference.py  test_models.py  test_preprocess.py
