[metadata]
name = deepfake-detector
version = 0.1.0
author = Ayush Chauhan
author_email = talktoayushchauhan@gmail.com
description = Multimodal deepfake detection toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    torch>=1.12.0
    torchvision>=0.13.0
    librosa>=0.9.0
    opencv-python>=4.5.0
    pillow>=8.0.0
    numpy>=1.21.0
    scikit-learn>=1.0.0
    tqdm>=4.60.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deepfake-infer = deepfake_detector.inference:main
